@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.16';
+my $version = '1.17';
 ($libdir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -217,10 +217,10 @@ sub check_kit {
 	print STDERR "Checking your kit ... ";
 
 	my %file_sizes = (
-		'README', 2790,
-		'Changes', 480,
+		'README', 2833,
+		'Changes', 607,
 		'MANIFEST', 121,
-		'Clui.pm', 29542,
+		'Clui.pm', 31223,
 		'Clui/FileSelect.pm', 8832,
 		'examples/test_script', 6569,
 	);
